created orders endpoint

--- a/src/Nancy.Siren.Demo/Nancy.Siren.Demo.csproj
+++ b/src/Nancy.Siren.Demo/Nancy.Siren.Demo.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="HomeModule.cs" />
+    <Compile Include="OrdersModule.cs" />
     <Compile Include="Infrastructure\OrderLinkGenerator.cs" />
     <Compile Include="Infrastructure\OrderWriter.cs" />
     <Compile Include="Model\IOrderRepository.cs" />
