--- a/src/Nancy.Siren.Demo/Nancy.Siren.Demo.csproj
+++ b/src/Nancy.Siren.Demo/Nancy.Siren.Demo.csproj
@@ -48,8 +48,15 @@
     <Reference Include="Nancy.Owin">
       <HintPath>..\packages\Nancy.Owin.1.2.0\lib\net40\Nancy.Owin.dll</HintPath>
     </Reference>
+    <Reference Include="Nancy.Serialization.ServiceStack, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Nancy.Serialization.ServiceStack.1.3-Pre216\lib\net40\Nancy.Serialization.ServiceStack.dll</HintPath>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.3.9.11\lib\net35\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,7 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="FormatterExtensions.cs" />
     <Compile Include="HomeModule.cs" />
+    <Compile Include="Infrastructure\OrderItemLinkGenerator.cs" />
+    <Compile Include="Infrastructure\OrderItemViewModelWriter.cs" />
+    <Compile Include="Model\OrderItem.cs" />
+    <Compile Include="Model\OrderItemViewModel.cs" />
     <Compile Include="OrdersModule.cs" />
     <Compile Include="Infrastructure\OrderLinkGenerator.cs" />
     <Compile Include="Infrastructure\OrderWriter.cs" />
