--- a/src/Nancy.Siren.Demo/packages.config
+++ b/src/Nancy.Siren.Demo/packages.config
@@ -3,9 +3,9 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
-  <package id="Nancy" version="1.2.0" targetFramework="net451" />
-  <package id="Nancy.Owin" version="1.2.0" targetFramework="net451" />
-  <package id="Nancy.Serialization.ServiceStack" version="1.3-Pre216" targetFramework="net451" />
+  <package id="Nancy" version="1.4.3" targetFramework="net451" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net451" />
+  <package id="Nancy.Serialization.ServiceStack" version="1.4.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="ServiceStack.Text" version="3.9.11" targetFramework="net451" />
 </packages>
