--- a/src/Nancy.Siren.Demo/project.json
+++ b/src/Nancy.Siren.Demo/project.json
@@ -1,18 +1,21 @@
-﻿{
+{
+  "version": "1.0.0-*",
+  "buildOptions": {
+    "debugType": "portable",
+    "emitEntryPoint": true
+  },
   "dependencies": {
-    "Microsoft.Owin": "3.0.1",
-    "Microsoft.Owin.Host.HttpListener": "3.0.1",
-    "Microsoft.Owin.Hosting": "3.0.1",
-    "Nancy": "1.4.3",
-    "Nancy.Owin": "1.4.1",
-    "Nancy.Serialization.ServiceStack": "1.4.1",
-    "Owin": "1.0.0",
-    "ServiceStack.Text": "3.9.11"
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+    "Microsoft.AspNetCore.Owin": "1.0.0",
+    "Nancy": "2.0.0-barneyrubble",
+    "Nancy.Siren": { "target": "project" },
+    "Nancy.Serialization.ServiceStack": "2.0.0-barneyrubble",
+    "ServiceStack.Text": "3.9.71"
+  },
+  "commands": {
+    "web": "Microsoft.AspNet.Server.Kestrel"
   },
   "frameworks": {
-    "net451": {}
-  },
-  "runtimes": {
-    "win": {}
+    "net452": {}
   }
 }
