--- a/src/Nancy.Siren/project.json
+++ b/src/Nancy.Siren/project.json
@@ -1,11 +1,9 @@
 ﻿{
   "dependencies": {
-    "Nancy": "1.4.3"
+    "Nancy": "2.0.0-barneyrubble"
   },
   "frameworks": {
-    "net451": {}
-  },
-  "runtimes": {
-    "win": {}
+    "netcoreapp1.0": {},
+    "net452": {}
   }
 }
