Change framework from .net core to .net standard 1.6

--- a/src/Nancy.Siren/project.json
+++ b/src/Nancy.Siren/project.json
@@ -3,7 +3,7 @@
     "Nancy": "2.0.0-barneyrubble"
   },
   "frameworks": {
-    "netcoreapp1.0": {},
+    "netstandard1.6": {}, 
     "net452": {}
   }
 }
